[package]
name = "cumulus-pallet-session-benchmarking"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
description = "FRAME sessions pallet benchmarking for statemint"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate', rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
pallet-session = { default-features = false, git = 'https://github.com/paritytech/substrate', rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }

[features]
default = ["std"]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"pallet-session/std",
]
